nrp-vllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: llm
  name: watt-8b-vllm-inference
  namespace: i2-danswer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: watt-8b-vllm-inference
  sessionAffinity: None
  type: ClusterIP
