nrp-vllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watt-8b-vllm-inference
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  tls:
    - hosts:
        - "watt-8b.nrp-nautilus.io"
      secretName:
  rules:
    - host: "watt-8b.nrp-nautilus.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watt-8b-vllm-inference
                port:
                  number: 5000
